force-app/main/default/objects/Package_Item__c/Package_Item__c.object-meta.xml
<CustomObject>
    <label>Package Item</label>
    <nameField>
        <displayFormat>PI-{00000}</displayFormat>
        <label>Package Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>