force-app/main/default/objects/Package_Item__c/fields/Package_Item_Image__c.field-meta.xml
<CustomField>
    <fullName>Package_Item_Image__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/068U800000CsWiL&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package_Item_Image</label>
    <type>Text</type>
</CustomField>